updated buyers agent page

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/sync-rss.js && next build",
+    "build": "next build",
     "build:static": "node scripts/build-static-blog.js && next build",
+    "cf:build": "next build && npx --yes @cloudflare/next-on-pages@latest",
+    "cf:deploy": "wrangler pages deploy .vercel/output/static --project-name alto-property-website-2",
     "start": "next start",
     "lint": "next lint"
   },
@@ -38,16 +40,19 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/supabase-js": "^2.55.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
