--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "cf:build": "next build && npx --yes @cloudflare/next-on-pages@latest",
     "cf:deploy": "wrangler pages deploy .vercel/output/static --project-name alto-property-website-2",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -48,6 +49,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "@prisma/client": "^5.16.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
@@ -66,6 +68,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^4.19.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
@@ -75,6 +78,7 @@
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prisma": "^5.16.1"
   }
 }
