remove auto open for dialer and remove create admin account on the admin landing page

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
+    "googleapis": "^166.0.0",
     "input-otp": "1.4.1",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
